# Kalklator_wielomianow

./: CMakeLists.txt  README.md  main.cpp
Classes/Jednomian/: jednomian.cpp  jednomian.h
Classes/Wielomian/: wielomian.cpp  wielomian.h
